inoa-test/src/test/k3s/test/inoa/measurement/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measurement
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: measurement
  template:
    metadata:
      labels:
        app.kubernetes.io/name: measurement
    spec:
      initContainers:
        - name: measurement-postgres
          image: postgres:14.4-bullseye
          imagePullPolicy: Never
          command: [sh, -c, until psql ; do sleep 1 ; done]
          env:
            - name: PGCONNECT_TIMEOUT
              value: "1"
            - name: PGHOST
              valueFrom:
                configMapKeyRef:
                  name: fleet-environment
                  key: DATASOURCES_DEFAULT_HOST
            - name: PGUSER
              valueFrom:
                configMapKeyRef:
                  name: fleet-environment
                  key: DATASOURCES_DEFAULT_USERNAME
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  name: fleet-environment
                  key: DATASOURCES_DEFAULT_PASSWORD
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
        - name: measurement-influxdb
          image: curlimages/curl
          imagePullPolicy: IfNotPresent
          command: [sh, -c, until curl -fs $URL; do sleep 2; done]
          env:
            - name: URL
              valueFrom:
                configMapKeyRef:
                  name: measurement-environment
                  key: INFLUXDB_URL
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      containers:
        - name: measurement
          image: ghcr.io/inoa-io/measurement
          imagePullPolicy: Never
          envFrom:
            - configMapRef:
                name: inoa-environment
                optional: true
            - configMapRef:
                name: measurement-environment
            - secretRef:
                name: measurement-environment
          ports:
            - name: http
              containerPort: 8080
            - name: managment
              containerPort: 8090
          startupProbe:
            httpGet:
              path: /endpoints/health
              port: managment
            initialDelaySeconds: 10
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /endpoints/health/readiness
              port: managment
          livenessProbe:
            httpGet:
              path: /endpoints/health/liveness
              port: managment
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
