inoa-test/src/test/k3s/test/inoa/measurement/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: measurement
spec:
  rules:
    - host: registry.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: measurement
                port:
                  name: http
